--- a/index.html
+++ b/index.html
@@ -599,7 +599,14 @@
               <small>Upgrading a legacy PLC-5/15 to a modern PLC platform</small>
             </div>
           </div>
-          <img src="projects/packaging-line.jpg" alt="Upgraded PLC panel for packaging line" style="width:100%;border-radius:10px;margin:0.4rem 0;">
+          <picture>
+  <source srcset="projects/packaging-line.webp" type="image/webp">
+  <img src="projects/packaging-line.jpg"
+       alt="Upgraded PLC panel for packaging line"
+       loading="lazy"
+       width="900"
+       height="500">
+</picture>
           <p>Replaced an aging PLC with a modern platform, added structured tags, and improved diagnostics to reduce unplanned downtime.</p>
           <ul>
             <li>New PLC hardware and I/O mapping</li>
@@ -615,7 +622,14 @@
               <small>Improved operator visibility and alarms for maintenance team</small>
             </div>
           </div>
-          <img src="projects/conveyor-hmi.jpg" alt="Redesigned HMI screens for conveyor system" style="width:100%;border-radius:10px;margin:0.4rem 0;">
+          <picture>
+  <source srcset="projects/conveyor-hmi.webp" type="image/webp">
+  <img src="projects/conveyor-hmi.jpg"
+       alt="Redesigned HMI screens for conveyor system"
+       loading="lazy"
+       width="900"
+       height="500">
+</picture>
           <p>Redesigned HMI screens for a multi‑zone conveyor, making it easier for operators to see faults and adjust speeds.</p>
           <ul>
             <li>Alarm summary and merge switch control</li>
@@ -631,7 +645,15 @@
               <small>Reverse engineering of code to a new platform</small>
             </div>
           </div>
-          <img src="projects/panel-audit.jpg" alt="Documented industrial control panel audit" style="width:100%;border-radius:10px;margin:0.4rem 0;">
+          <picture>
+  <source srcset="projects/panel-audit.webp" type="image/webp">
+  <img src="projects/panel-audit.jpg"
+       alt="Documented industrial control panel audit"
+       loading="lazy"
+       width="900"
+       height="500">
+</picture>
+
           <p>Moving the system from old Allen-Bradley PLC-5 to an AutomationDirect platform, including design, programming, testing, and commissioning support.</p>
           <ul>
             <li>Program rewrite from RSLogix 500 for Click ladder logic</li>
