--- a/index.html
+++ b/index.html
@@ -335,6 +335,17 @@
       header .contact-mini{text-align:left;}
       .two-col,.contact-cols{grid-template-columns:1fr;}
     }
+  /* === Project image layout fix === */
+.project-image {
+  width: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.project-image img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
   </style>
 </head>
 <body>
