--- a/index.html
+++ b/index.html
@@ -346,6 +346,11 @@
   height: auto;
   object-fit: cover;
 }
+    img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+}
   </style>
 </head>
 <body>
