--- a/index.html
+++ b/index.html
@@ -356,7 +356,11 @@
 <body>
   <header>
   <div style="display:flex;align-items:center;gap:0.5rem;">
-    <img src="./WEB_Logo.jpg" alt="AzovNorth Industries Logo" class="logo">
+    <img src="logo.webp"
+     alt="AzovNorth Industries Logo"
+     class="logo"
+     width="300"
+     height="75">
   </div>
   <nav class="top-nav">
     <button type="button" onclick="scrollToId('services')">Services</button>
