--- a/index.html
+++ b/index.html
@@ -71,10 +71,16 @@
       z-index:20;
     }
     header img.logo{
-      height:75px;
-      max-width:520px;
-      object-fit:contain;
-    }
+  height:100px;
+  width:auto;
+  max-width:520px;
+  object-fit:contain;
+}
+@media (max-width:900px){
+  header img.logo{
+    height:80px;
+  }
+}
     header .contact-mini{
       text-align:right;
       font-size:0.85rem;
