--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
 
         <article class="card">
           <div class="card-header">
-            <input type="checkbox" id="svc-support" onchange="syncServiceByKey('support', this.checked)"">
+            <input type="checkbox" id="svc-support" onchange="syncServiceByKey('support', this.checked)">
             <div>
               <h3>On‑Call Automation Support</h3>
               <small>Help when automation issues affect production</small>
