--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>AzovNorth Industries | Industrial Automation & Control</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="AzovNorth Industries provides industrial automation, PLC and HMI programming, legacy control system audits, and modernization planning for manufacturers in Winnipeg and Manitoba.">
+  <meta name="description" content="Industrial automation and PLC programming services for manufacturers in Winnipeg and Manitoba. Control system audits, HMI redesign, and modernization planning.">
   <!-- Canonical URL -->
   <link rel="canonical" href="https://www.azovnorth.ca/">
   <script type="application/ld+json">
