--- a/index.html
+++ b/index.html
@@ -73,12 +73,20 @@
     header img.logo{
   height:80px;
   width:auto;
-  max-width:400px;
+  max-width:100%;
   object-fit:contain;
 }
-@media (max-width:400px){
+@media (max-width:768px){
+  header{
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    text-align:center;
+  }
+
   header img.logo{
     height:80px;
+    margin-bottom:0.5rem;
   }
 }
     header .contact-mini{
