--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <title>AzovNorth Industries | Industrial Automation & Control</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="Industrial automation and PLC programming services for manufacturers in Winnipeg and Manitoba. Control system audits, HMI redesign, and modernization planning.">
+  <!-- OpenGraph -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://www.azovnorth.ca/">
+<meta property="og:title" content="AzovNorth Industries | Industrial Automation & Controls">
+<meta property="og:description" content="Industrial automation, PLC and HMI programming, control system audits, and modernization planning for manufacturers in Winnipeg and Manitoba.">
+<meta property="og:image" content="https://www.azovnorth.ca/og-image.jpg">
+  <!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="AzovNorth Industries | Industrial Automation & Controls">
+<meta name="twitter:description" content="Industrial automation, PLC and HMI programming, control system audits, and modernization planning in Winnipeg and Manitoba.">
+<meta name="twitter:image" content="https://www.azovnorth.ca/og-image.jpg">
   <!-- Canonical URL -->
   <link rel="canonical" href="https://www.azovnorth.ca/">
   <script type="application/ld+json">
